tests/fail/test-neg-same-name.ctds

integer func(){
  integer x;
  x=0;
}
// functions names duplicated
bool func(){
  return true;
}
